syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "DesafioPix";

package br.com.zup;

service RegistraChavePixService {
  rpc send (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoChaveEnum tipoChaveEnum = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse {
  string pixId = 1;
}

enum TipoChaveEnum {
 CHAVE_DESCONHECIDA = 0;
 CPF = 1;
 CELULAR = 2;
 EMAIL = 3;
 ALEATORIA = 4;

}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA =2;

}